--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 #All Variables Are Required
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-FSUB_ID = ""
-DUMP_CHAT_ID = ""
+BOT_TOKEN = "7523062411:AAEBicxspTMS8v87gzDuaK9dsY6VpuHtYGo"
+TELEGRAM_API = "21939922"
+TELEGRAM_HASH = "bd2d18dd26b200480bda4cbdf2c2da30"
+FSUB_ID = "1768449142"
+DUMP_CHAT_ID = "2083404752"
